--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Felipe Omar Projects
+description: A personal page about projects with shell script, C/C++ and PIC microcontrollers... Have fun!
