--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Felipe Omar's Projects
 description: A personal page about projects with shell script, C/C++ and PIC microcontrollers... Have fun!
+google_analytics: UA-104526209-3
